--- a/app.json
+++ b/app.json
@@ -23,6 +23,16 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["node_modules/@expo-google-fonts/oswald/Oswald_400Regular.ttf",
+                    "node_modules/@expo-google-fonts/lato/Lato_400Regular.ttf"
+                  ]
+        }
+      ]
+    ]
   }
 }
